# barrel_embed

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  benchmark.escript  mkdocs.yml  rebar.config
.github/workflows/: ci.yml
docs/: api.md  changelog.md  choosing-provider.md  getting-started.md  index.md  venv-setup.md
docs/dev/: adding-provider.md
docs/providers/: azure.md  bedrock.md  clip.md  colbert.md  fastembed.md  index.md  local.md  splade.md
examples/preload/: Dockerfile  README.md  docker-compose.yml  preload_example.erl  sys.config
priv/: embed_server.py  pyproject.toml
priv/barrel_embed/: __init__.py  nif_api.py
priv/tests/: test_server.py
scripts/: setup_python_venv.sh
site/: 404.html  index.html  sitemap.xml
site/api/: index.html
site/changelog/: index.html
site/choosing-provider/: index.html
site/design/: index.html
site/getting-started/: index.html
src/: barrel_embed.app.src  barrel_embed.erl  barrel_embed_app.erl  barrel_embed_azure.erl  barrel_embed_bedrock.erl  barrel_embed_clip.erl  barrel_embed_cohere.erl  barrel_embed_colbert.erl  barrel_embed_fastembed.erl  barrel_embed_jina.erl  barrel_embed_local.erl  barrel_embed_mistral.erl  barrel_embed_ollama.erl  barrel_embed_openai.erl  barrel_embed_port_server.erl  barrel_embed_preload.erl  barrel_embed_py.erl  barrel_embed_python_queue.erl  barrel_embed_splade.erl  barrel_embed_venv.erl  barrel_embed_vertex.erl  barrel_embed_voyage.erl
test/: barrel_embed_benchmark.erl  barrel_embed_preload_tests.erl  barrel_embed_venv_tests.erl
(+10 files in other folders)
