[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "barrel_embed"
version = "0.2.0"
description = "Async embedding server for Erlang"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
sentence-transformers = ["sentence-transformers>=2.0.0"]
fastembed = ["fastembed>=0.1.0"]
splade = ["transformers>=4.0.0", "torch>=2.0.0"]
colbert = ["transformers>=4.0.0", "torch>=2.0.0"]
clip = ["transformers>=4.0.0", "torch>=2.0.0", "pillow>=9.0.0"]
all = [
    "sentence-transformers>=2.0.0",
    "fastembed>=0.1.0",
    "transformers>=4.0.0",
    "torch>=2.0.0",
    "pillow>=9.0.0",
]
uvloop = ["uvloop>=0.17.0"]

[project.scripts]
barrel-embed = "barrel_embed.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
